Se mejora la calidad del código